Source/JavaScriptCore/API/APICallbackFunction.h
@@ -29,6 +29,7 @@
 #include "APICast.h"
 #include "APIShims.h"
 #include "Error.h"
+#include "JSCallbackConstructor.h"
 #include <wtf/Vector.h>
 
 namespace JSC {
@@ -36,6 +37,7 @@ namespace JSC {
 struct APICallbackFunction {
 
 template <typename T> static EncodedJSValue JSC_HOST_CALL call(ExecState*);
+template <typename T> static EncodedJSValue JSC_HOST_CALL construct(ExecState*);
 
 };
 
@@ -56,7 +58,7 @@ EncodedJSValue JSC_HOST_CALL APICallbackFunction::call(ExecState* exec)
     JSValueRef result;
     {
         APICallbackShim callbackShim(exec);
-        result = jsCast<T*>(toJS(functionRef))->m_callback(execRef, functionRef, thisObjRef, argumentCount, arguments.data(), &exception);
+        result = jsCast<T*>(toJS(functionRef))->functionCallback()(execRef, functionRef, thisObjRef, argumentCount, arguments.data(), &exception);
     }
     if (exception)
         exec->vm().throwException(exec, toJS(exec, exception));
@@ -67,6 +69,41 @@ EncodedJSValue JSC_HOST_CALL APICallbackFunction::call(ExecState* exec)
 
     return JSValue::encode(toJS(exec, result));
 }
+
+template <typename T>
+EncodedJSValue JSC_HOST_CALL APICallbackFunction::construct(ExecState* exec)
+{
+    JSObject* constructor = exec->callee();
+    JSContextRef ctx = toRef(exec);
+    JSObjectRef constructorRef = toRef(constructor);
+
+    JSObjectCallAsConstructorCallback callback = jsCast<T*>(constructor)->constructCallback();
+    if (callback) {
+        size_t argumentCount = exec->argumentCount();
+        Vector<JSValueRef, 16> arguments;
+        arguments.reserveInitialCapacity(argumentCount);
+        for (size_t i = 0; i < argumentCount; ++i)
+            arguments.uncheckedAppend(toRef(exec, exec->uncheckedArgument(i)));
+
+        JSValueRef exception = 0;
+        JSObjectRef result;
+        {
+            APICallbackShim callbackShim(exec);
+            result = callback(ctx, constructorRef, argumentCount, arguments.data(), &exception);
+        }
+        if (exception) {
+            exec->vm().throwException(exec, toJS(exec, exception));
+            return JSValue::encode(toJS(exec, exception));
+        }
+        // result must be a valid JSValue.
+        if (!result)
+            return throwVMTypeError(exec);
+        return JSValue::encode(toJS(result));
+    }
+    
+    return JSValue::encode(toJS(JSObjectMake(ctx, jsCast<JSCallbackConstructor*>(constructor)->classRef(), 0)));
+}
+
 } // namespace JSC
 
 #endif // APICallbackFunction_h
